syntax = "proto3";

option csharp_namespace = "DrugPrevention.GrpcService.DuyenCTT";

service CourseEnrollmentDuyenCTTGRPC {
  rpc GetAllAsync (EmptyRequest) returns (CourseEnrollmentDuyenCTTGRPCList);
  rpc GetByIdAsync (CourseEnrollmentDuyenCTTIdRequest) returns (CourseEnrollmentDuyenCTT);
  rpc CreateAsync (CourseEnrollmentDuyenCTT) returns (Int32Value);
  rpc UpdateAsync (CourseEnrollmentDuyenCTT) returns (Int32Value);
  rpc DeleteAsync (CourseEnrollmentDuyenCTTIdRequest) returns (BoolValue);
}

message EmptyRequest {}

message CourseEnrollmentDuyenCTTGRPCList {
  repeated CourseEnrollmentDuyenCTT items = 1;
}

message CourseEnrollmentDuyenCTT {
  int32 enrollmentId = 1;
  int32 userId = 2;
  int32 courseId = 3;
  string enrolledAt = 4;
  string completedAt = 5;
  double score = 6;
  string certificateUrl = 7;
  bool isCertified = 8;
  string enrollmentSource = 9;
  int32 progress = 10;
}

message CourseEnrollmentDuyenCTTIdRequest {
  int32 courseEnrollmentDuyenCTTId = 1;
}

message Int32Value {
  int32 value = 1;
}

message BoolValue {
  bool value = 1;
}
